🍵🏊🏼 Updated with Glitch

--- a/_posts/events/2019-04-21-events.md
+++ b/_posts/events/2019-04-21-events.md
@@ -14,7 +14,7 @@ feature:
 image: meta-preview.png
 ---
 
-<p class="lead">Here is a list of events I'm planning to attend or speak at!</p>
+<p class="lead">Here is a list of events I am planning to attend or speak at!</p>
 
 **Need a speaker at your event? Feel free to get in touch with me!** You can find some of my recent talks under the <a href="/hashtag/talks" class="uno">#talks</a> hashtag, and an additional list of planned topics at the bottom of this page.
 
@@ -40,18 +40,19 @@ Here is a (non-exhaustive) list of topics I am planning to speak about in 2019!
 ### CSS
 
 - Intro to CSS Animations
-- Dark Themes in CSS
+- Dark Theming the Web
 
 ### Hackathons &amp; Communities
 
+- Creating Inclusive Spaces
 - Automate Your Event with Chat Bots
-- Building Inclusive Spaces
 
 ### Tech for Non Tech People
 
 - Quick Dive into Frontend Dev
 - [Quick Dive into Frontend Dev (pony edition)](https://speakerdeck.com/pixely/how-equestria-was-made-building-efnws-website-by-pixely-number-ponydev-at-everfree-northwest-1)
 
-### Other
+### Workshops
 
 - Intro to Coding: Build Your First Game (workshop)
+- Intro to Coding: Build Your First Website (workshop)
