update asset paths

--- a/_posts/2019-03-01-guru/2019-03-01-guru.md
+++ b/_posts/2019-03-01-guru/2019-03-01-guru.md
@@ -41,3 +41,17 @@ Checkbox, reduced motion, etc.
 - Fixing an issue with `git-flow-avh`
 - Debugging Electron apps
 - Etc
+
+)![guru avatar users](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-avatar-users.png)
+![guru avatars feed](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-avatars-feed.png)
+![guru blank mentions](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-blank-mentions.png)
+![guru blank questions](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-blank-questions.png)
+![guru blank verified](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-blank-verified.png)
+![guru checkbox 1](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-checkbox-1.png)
+![guru checkbox 2](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-checkbox-2.png)
+![guru preview after](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-preview-after.png)
+![guru preview before](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-preview-before.png)
+![guru sharing dropdown](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-sharing-dropdown.png)
+![guru sharing knowledge](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-sharing-knowledge.png)
+![guru upload after](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-upload-after.png)
+![guru upload before](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-upload-before.png)
