--- a/_posts/2018-09-05-septa/2018-09-05-septa.md
+++ b/_posts/2018-09-05-septa/2018-09-05-septa.md
@@ -57,18 +57,15 @@ The most common use case for the System Status page is for mobile users to track
 
 Once of the most interesting challenges with this project was working on an [API (data feed)](https://sidewaysdictionary.com/#/term/api) that did not provide data in a developer-friendly format. This API was full of inconsistencies (and typos!) but it was the best form of information that SEPTA had to offer. Thankfully, React makes it easy to iron out these inconsistencies, so strings like `Yes` and `Y` were turned into booleans like `true` as data flows in. [(Don’t believe us? Click here to see it for yourself!)](https://www3.septa.org/api/Alerts/?dataType=jsonp)
 
-
-<pre>
-[{
-	"route_id":"bus_route_1",
-	"route_name":"1",
-	"mode":"Bus",
-	"isadvisory":"<strong class="accent-bg">No</strong>",
-	"isdetour":"N",
-	"isalert":"N",
-	"<strong class="accent-bg">issuppend</strong>":"N",
-	"last_updated":"Mar 22 2018  3:31PM",
-	"<strong class="accent-bg">isSnow</strong>":"N",
-	"description":"Parx Casino to 54th-City"
-}, ...
-</pre>
+>      [{
+>      	"route_id":"bus_route_1",
+>      	"route_name":"1",
+>      	"mode":"Bus",
+>      	"isadvisory":"<strong class="accent-bg">No</strong>",
+>      	"isdetour":"N",
+>      	"isalert":"N",
+>      	"<strong class="accent-bg">issuppend</strong>":"N",
+>      	"last_updated":"Mar 22 2018  3:31PM",
+>      	"<strong class="accent-bg">isSnow</strong>":"N",
+>      	"description":"Parx Casino to 54th-City"
+>      }, ...
