--- a/_posts/events/2019-04-25-events.md
+++ b/_posts/events/2019-04-25-events.md
@@ -11,7 +11,7 @@ feature:
   width: 16
   height: 10
   image: feature.png
-image: featue.png
+image: meta-preview.png
 ---
 
 <p class="lead">Here is a list of events I am planning to attend or speak at!</p>
