--- a/_posts/2019-04-12-bitcamp/2019-04-12-bitcamp.md
+++ b/_posts/2019-04-12-bitcamp/2019-04-12-bitcamp.md
@@ -3,6 +3,7 @@ title: Bitcamp
 tags: design hackathon
 accent: teal
 tile:
+  order: 20
   width: 6
   height: 6
   image: tile.png
@@ -11,35 +12,34 @@ feature:
   height: 10
   image: feature.png
 image: meta-preview.png
-hidden: true
 ---
 
-As part of Bitcamp 2019's Design Den, I designed a bunch of cool things and helped a bunch of cool people! This portfolio post showcases the work I have done over the past 30 hours.
+As part of Bitcamp's Design compeition, I designed a couple of user interfaces, icons, and art (including for this website) in a series of overnight challenges. This page showcases just a few of the cool things I worked on!
 
 > **Table of Contents:**
 > 
-> - [Colorwar submission](#colorwar-submission)
-> - [Soothing FLAME RED lava lamp](#soothing-flame-red-lava-lamp)
-> - [Bitstrict fresh & organic taco sauces](#bitstrict-fresh--organic-taco-sauces)
-> - [Brighten: Improve your mood in 2 minutes!](#brighten-improve-your-mood-in-2-minutes)
-> - [Bitchella concert (feat. lots of hype artists)](#bitchella-concert-feat-lots-of-hype-artists)
-> - [Treetop: Connecting kids in military families](#treetop-connecting-kids-in-military-families)
+> - [Building with purpose](#building-with-purpose)
+<!-- > - [Soothing FLAME RED lava lamp](#soothing-flame-red-lava-lamp) -->
+<!-- > - [Bitstrict fresh & organic taco sauces](#bitstrict-fresh--organic-taco-sauces) -->
+> - [Brighten app: Improve your mood in 2 minutes!](#brighten-improve-your-mood-in-2-minutes)
+<!-- > - [Bitchella concert (feat. lots of hype artists)](#bitchella-concert-feat-lots-of-hype-artists) -->
+> - [Treetop app: Connecting kids in military families](#treetop-connecting-kids-in-military-families)
 > - [BitPay app: Bitcoin made easy](#bitpay-app-bitcoin-made-easy)
-> - [Various mentorship](#various-mentorship)
+<!-- > - [Various mentorship](#various-mentorship)  -->
 
-![things i made at bitcamp](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/hello.png?1555223303835)
-
-## Colorwar submission
+## Building with Purpose
 
 _"Building with purpose"_ means bringing our unique skills to the table and working together as a team with to achieve a common goal! 🙌
 
 So I illustrated our (s)elves building a cool website together!! This is actually a somewhat accurate representation of what goes on in my brain when I make websites!
 
+This illustration is now used in my [Intro to Jekyll](/jekyll-starter) guide!
+
 <a href="https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/colorwar.png?1555223309858" target="_blank" class="button uno"><img src="https://icon.now.sh/insert_photo" /> View Full Size →</a>
 
 ![colorwar submission](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/colorwar.png?1555223309858)
 
-## Soothing FLAME RED lava lamp
+<!-- ## Soothing FLAME RED lava lamp
 
 _Promopt: Design something soothing using FLAME RED as one of the colors (#FF3F46)._
 
@@ -59,7 +59,7 @@ Here are potential applications for ads, and how the bitcamp pixels are placed i
 
 ![ads](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/bitstrict ads.png?1555224895201)
 ![screens](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/bitstrict artboards.png?1555224895283)
-
+ -->
 ## Brighten: Improve your mood in 2 minutes!
 
 _Prompt: Design an experience for an app to help you with your mood._
@@ -70,14 +70,14 @@ I designed an app that improves your mood with just 2 minutes, with the help of 
 
 ![screens](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/brighten%20artboards.png?1555224488955)
 
-## Bitchella concert (feat. lots of hype artists)
+<!-- ## Bitchella concert (feat. lots of hype artists)
 
 _Prompt: Design something hype only using a shade of pale blue._
 
 There's nothing that says I can't use a transparent color! So using only white and overlays of #004980 at 25% alpha, I made a **HYPE** concert poster featuring **all of your favourite artists** from the Billboard Top 40 lists!
 
 ![concert poster](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/concert.png?1555223939824)
-
+ -->
 ## Treetop: Connecting kids in military families
 
 _Prompt: Design a low or high fidelity prototype to connect kids in military families who move around a lot._
@@ -92,7 +92,7 @@ Keeping in mind privacy and laws restricting the use of personally identifiable 
 
 ![screens](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/treetop%20artboards.png?1555223894761)
 
-## BitPay app: Bitcoin made easy
+## BitPay: Bitcoin made easy
 
 I worked with a team who had an idea of making bitcoin as seamless as Venmo, and as frictionless as cash. It even comes complete with the social aspect — each transaction allows you to attach a location for additional context.
 
@@ -102,7 +102,7 @@ The rest of my left Bitcamp on Friday night never to seen again, and the only th
 
 ![screens](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/bitpay%20artboards.png?1555224619997)
 
-## Various mentorship
+<!-- ## Various mentorship
 
 I also helped even more along the way. Here are some of them below:
 
@@ -125,7 +125,7 @@ A team needed last minute logo help, so I provided feedback that ultimated resul
 Bonus pic: here's my setup for the weekend. Yes, I did carry a monitor all the way from Philly.
 
 ![photo](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/bonus%3A my setup.png?1555226383938)
-
+ -->
 ---
 
 Additional credits: thank you to the people who run Bitcamp!
