--- a/_posts/2018-09-05-septa/2018-09-05-septa.md
+++ b/_posts/2018-09-05-septa/2018-09-05-septa.md
@@ -3,6 +3,7 @@ title: SEPTA System Status
 tags: work transit
 accent: blue
 tile:
+  order: 21
   width: 10
   height: 5
   image: feature.svg
@@ -11,7 +12,6 @@ feature:
   height: 8
   image: feature.svg
 assets: https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/
-hidden: true
 ---
 
 <p class="lead">
