a bunch of new case studies

--- a/_posts/2019-03-04-splatoon/2019-03-04-splatoon.md
+++ b/_posts/2019-03-04-splatoon/2019-03-04-splatoon.md
@@ -13,11 +13,9 @@ feature:
   height: 11
   image: feature.png
 image: meta-preview.png
-draft: true
 ---
 
-Splatoon is this really cool game I play that involves splatting other players with ink. I'm proud to be part of a friendly and community that's quite hard to come across, especially in esports.
-
+<!--
 ## Outline
 
 - Intro to Splatoon
@@ -33,30 +31,45 @@ Splatoon is this really cool game I play that involves splatting other players w
   - HRG
   - Fulton
 
-## I'm on Twitch!
+  -->
 
-I'm really just here to have a great time, so sit back, stay for a while, and send me some positive vibes! 👋
+<p class="lead"><strong>Splatoon 2</strong> is this really cool game I play that involves splatting other players with ink. I'm proud to be part of a friendly and community that's quite hard to come across, especially in esports.</p>
 
-<a class="uno button" href="https://twitch.tv/pixelysquid" target="_blank"><img src="https://icon.now.sh/twitch/6441a5" class="visible-theme-light" height="14" width="14" /><img src="https://icon.now.sh/twitch/b9a3e3" class="visible-theme-dark" height="14" width="14" /> Follow me on Twitch!</a>
+> ## Follow me on Twitch!
+>
+> I'm really just here to have a great time, so sit back, stay for a while, and send me some positive vibes:
+>
+> <a class="button" href="https://twitch.tv/pixelysquid" target="_blank"><img src="https://icon.now.sh/twitch/6441a5" class="visible-theme-light" height="14" width="14" /><img src="https://icon.now.sh/twitch/b9a3e3" class="visible-theme-dark" height="14" width="14" /> @pixelysquid on Twitch</a>
 
-As part of my setup, I designed a digital graphics package for my stream.
+---
 
-### Design System
+Here are some of the other things I worked on:
 
-I worked on a design system for my streams, and additionally future tournaments I may or may not be putting together.
+## Design System
 
-<!-- (TODO: put repo on GitHub) -->
+As part of my setup, I designed a digital graphics package for my stream, and additional graphics for future spkatoon-related events such as tournaments and meetups!
+
+## Code Experiments
 
 ### Philips Hue integration
 
 At the beginning of each match, each team is randomly assigned a color. Using the power of OpenCV, I tossed together a python script that detects your team's color and changes the ambient lighting of the room to match that color!
 
-<!-- TODO: put python script on GitHub -->
+> TODO: Create GIF
 
-### OBS Overlays
+### Current Stages Overlay
 
-I worked on an overlay for OBS that displays the current stages and modes. (GitHub @pixelyunicorn/splat-overlay)
+I worked on an overlay for OBS that displays the current stages and modes. You can find it online and embed it yourself at [https://pixelyunicorn.github.io/splat-overlay/](https://pixelyunicorn.github.io/splat-overlay/)
 
 ### Mixer Overlay
 
 I am currently experimenting with Mixer's overlay system and building an interactive overlay that allows viewers to see results before the appear on screen, and view previous matches.
+
+> TODO: Screenshots coming soon!
+
+## Teams
+
+I play, sub, and hang out with a bunch of fresh teams.
+
+- Tuffer Puffers
+- HRG
