--- a/_posts/2018-06-01-temple/2018-06-01-temple.md
+++ b/_posts/2018-06-01-temple/2018-06-01-temple.md
@@ -3,11 +3,15 @@ title: Temple University
 tags: work dev design
 accent: red
 tile:
-  width: 6
-  height: 6
+  order: 22
+  width: 5
+  height: 5
   image: tile.png
+feature:
+  width: 15
+  height: 9
+  image: feature.png
 image: meta-preview.png
-hidden: true
 assets: https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/
 ---
 
