splatoon page ayy live

--- a/_posts/2019-03-04-splatoon/2019-03-04-splatoon.md
+++ b/_posts/2019-03-04-splatoon/2019-03-04-splatoon.md
@@ -1,6 +1,6 @@
 ---
 title: Splatoon 2 Streaming
-tags: design
+tags: design esports
 accent: purple
 tile:
   order: 5
@@ -13,63 +13,79 @@ feature:
   height: 11
   image: feature.png
 image: meta-preview.png
+assets: https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/
 ---
 
-<!--
-## Outline
+<p class="lead"><strong>Splatoon 2</strong> is Nintendo's latest and freshest multiplayer game where inklings and octolings fight for turf using art-inspired weapons— it's super fun to play and even more interesting to watch! I'm proud to be part of a esports community is as friendly and inclusive as it gets!</p>
 
-- Intro to Splatoon
-- Watch me live
-- Design jawns
-- Code experiments
-  - OBS overlay
-  - Philiphs hue
-  - Mixer overlay
-- Team history
-  - GSQ
-  - Tuff
-  - HRG
-  - Fulton
-
-  -->
-
-<p class="lead"><strong>Splatoon 2</strong> is this really cool game I play that involves splatting other players with ink. I'm proud to be part of a friendly and community that's quite hard to come across, especially in esports.</p>
-
-> ## Follow me on Twitch!
+> ### Follow me on Twitch!
 >
-> I'm really just here to have a great time, so sit back, stay for a while, and send me some positive vibes:
+> Come hang out with me! I'm really just here to have a great time, so sit back, stay for a while, and send me some positive vibes. <コ:彡   C:彡
 >
 > <a class="button" href="https://twitch.tv/pixelysquid" target="_blank"><img src="https://icon.now.sh/twitch/6441a5" class="visible-theme-light" height="14" width="14" /><img src="https://icon.now.sh/twitch/b9a3e3" class="visible-theme-dark" height="14" width="14" /> @pixelysquid on Twitch</a>
 
 ---
 
-Here are some of the other things I worked on:
+As part of my Twitch stream series and as a member of the Splatoon community, I worked on a bunch of various jawns to help players improve their game and style!
 
 ## Design System
 
-As part of my setup, I designed a digital graphics package for my stream, and additional graphics for future spkatoon-related events such as tournaments and meetups!
+I designed a digital graphics package and design system for my Twitch stream, and additional graphics for future Splatoon-related events such as tournaments and meetups! Here is just a sample of the assets I use in my jawns:
 
-## Code Experiments
+_Channel introduction:_
 
-### Philips Hue integration
+![intro]({{ page.assets }}splatoon-intro.png)
+
+_Game mode icons:_
+
+![game modes]({{ page.assets }}splatoon-game-modes.png)
+
+_Game modes, explained:_
+
+![explainer]({{ page.assets }}splatoon-explainer.png)
+
+_Streamlabs alerts:_
+
+![game modes]({{ page.assets }}splatoon-streamlabs.png)
+
+_Banner system for HRG esports:_
+
+![banner]({{ page.assets }}splatoon-banner.png)
+
+(PS the game mode icons have been made into stickers!!)
+
+## Current Stages Overlay
+
+I worked on an overlay for OBS that displays the current stages and modes. You can find it online at [pixelyunicorn.github.io/splat-overlay](https://pixelyunicorn.github.io/splat-overlay/). Feel free to embed this page into your streams!
+
+![Screenshot of OBS with a web page overlay]({{ page.assets }}splatoon-splat-overlay.jpg)
+
+## Philips Hue integration
 
 At the beginning of each match, each team is randomly assigned a color. Using the power of OpenCV, I tossed together a python script that detects your team's color and changes the ambient lighting of the room to match that color!
 
-> TODO: Create GIF
+> TODO: Create GIF and put script on GitHub
 
-### Current Stages Overlay
+## Mixer Overlay
 
-I worked on an overlay for OBS that displays the current stages and modes. You can find it online and embed it yourself at [https://pixelyunicorn.github.io/splat-overlay/](https://pixelyunicorn.github.io/splat-overlay/)
+I am currently experimenting with Mixer's overlay system and building an interactive overlay that allows viewers to see live results (seconds before they appear on screen), and view previous matches.
 
-### Mixer Overlay
+## Teams, Orgs, 'n' Events
 
-I am currently experimenting with Mixer's overlay system and building an interactive overlay that allows viewers to see results before the appear on screen, and view previous matches.
+I stay fresh with playing, subbing, or just hanging out with profreshional squid game teams. Here's where you can currnetly find me:
 
-> TODO: Screenshots coming soon!
-
-## Teams
-
-I play, sub, and hang out with a bunch of fresh teams.
-
+- Hormone Replacement Gaming (HRG)
 - Tuffer Puffers
-- HRG
+- Crown Fresh
+- Squids in a Steel Furnace
+
+I have also participated in these tournaments:
+
+- Smash 'N' Splash (Wiscousion Dells WI)
+- Breakon (Deer Park NY)
+- Long Island Splat (Deer Park NY)
+- Splatboro (Hatboro PA)
+- Landfall (Hollywood FL)
+- Into the Harbor (Baltimore MD)
+- LUTI (online)
+- Sunday Morning Coffee (online)
