--- a/_posts/2019-03-04-splatoon/2019-03-04-splatoon.md
+++ b/_posts/2019-03-04-splatoon/2019-03-04-splatoon.md
@@ -68,7 +68,7 @@ At the beginning of each match, each team is randomly assigned a color. Using th
 
 ## Mixer Overlay
 
-I am currently experimenting with Mixer's overlay system and building an interactive overlay that allows viewers to see live results (seconds before they appear on screen), and view previous matches.
+I am currently experimenting with Mixer's overlay system and building an interactive overlay that allows viewers to see live results (seconds before they appear on screen), and view previous matches. This will be the subject of a future talk at a Vue or Tech x Gaming meetup near you!
 
 ## Teams, Orgs, 'n' Events
 
