use my big brain with asset paths

--- a/_posts/2019-03-01-guru/2019-03-01-guru.md
+++ b/_posts/2019-03-01-guru/2019-03-01-guru.md
@@ -14,6 +14,7 @@ feature:
   height: 9
   image: feature.png
 image: meta-preview.png
+assets: https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/
 draft: true
 ---
 
@@ -42,16 +43,16 @@ Checkbox, reduced motion, etc.
 - Debugging Electron apps
 - Etc
 
-)![guru avatar users](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-avatar-users.png)
-![guru avatars feed](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-avatars-feed.png)
-![guru blank mentions](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-blank-mentions.png)
-![guru blank questions](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-blank-questions.png)
-![guru blank verified](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-blank-verified.png)
-![guru checkbox 1](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-checkbox-1.png)
-![guru checkbox 2](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-checkbox-2.png)
-![guru preview after](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-preview-after.png)
-![guru preview before](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-preview-before.png)
-![guru sharing dropdown](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-sharing-dropdown.png)
-![guru sharing knowledge](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-sharing-knowledge.png)
-![guru upload after](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-upload-after.png)
-![guru upload before](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-upload-before.png)
+)![guru avatar users]({{ page.asssets }}guru-avatar-users.png)
+![guru avatars feed]({{ page.asssets }}guru-avatars-feed.png)
+![guru blank mentions]({{ page.asssets }}guru-blank-mentions.png)
+![guru blank questions]({{ page.asssets }}guru-blank-questions.png)
+![guru blank verified]({{ page.asssets }}guru-blank-verified.png)
+![guru checkbox 1]({{ page.asssets }}guru-checkbox-1.png)
+![guru checkbox 2]({{ page.asssets }}guru-checkbox-2.png)
+![guru preview after]({{ page.asssets }}guru-preview-after.png)
+![guru preview before]({{ page.asssets }}guru-preview-before.png)
+![guru sharing dropdown]({{ page.asssets }}guru-sharing-dropdown.png)
+![guru sharing knowledge]({{ page.asssets }}guru-sharing-knowledge.png)
+![guru upload after]({{ page.asssets }}guru-upload-after.png)
+![guru upload before]({{ page.asssets }}guru-upload-before.png)
