--- a/_posts/2019-04-12-bitcamp/2019-04-12-bitcamp.md
+++ b/_posts/2019-04-12-bitcamp/2019-04-12-bitcamp.md
@@ -12,6 +12,7 @@ feature:
   height: 10
   image: feature.png
 image: meta-preview.png
+assets: https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/
 ---
 
 As part of Bitcamp's Design compeition, I designed a couple of user interfaces, icons, and art (including for this website) in a series of overnight challenges. This page showcases just a few of the cool things I worked on!
@@ -35,9 +36,9 @@ So I illustrated our (s)elves building a cool website together!! This is actuall
 
 This illustration is now used in my [Intro to Jekyll](/jekyll-starter) guide!
 
-<a href="https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/colorwar.png?1555223309858" target="_blank" class="button uno"><img src="https://icon.now.sh/insert_photo" /> View Full Size →</a>
+<a href="{{ page.assets }}colorwar.png?1555223309858" target="_blank" class="button uno"><img src="https://icon.now.sh/insert_photo" /> View Full Size →</a>
 
-![colorwar submission](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/colorwar.png?1555223309858)
+![colorwar submission]({{ page.assets }}colorwar.png?1555223309858)
 
 <!-- ## Soothing FLAME RED lava lamp
 
@@ -45,7 +46,7 @@ _Promopt: Design something soothing using FLAME RED as one of the colors (#FF3F4
 
 Red and soothing? I was thinking of something along the lines of a cough drop, lava lamp, or even the interior of [an Virgin America airplane](https://www.google.com/search?tbm=isch&source=hp&q=virgin+america+interior&oq=virgin+america+interior)! I ultimately went with the lava lamp idea.
 
-![lava lamp](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/lava%20lamp.png?1555224155862)
+![lava lamp]({{ page.assets }}lava%20lamp.png?1555224155862)
 
 ## Bitstrict fresh & organic taco sauces
 
@@ -53,12 +54,12 @@ _Prompt: Use bitcamp pixels as part of a luxury product packaging campaign. Alte
 
 Introducting Bitstrict Taco: a bunch of fresh & organic sauces sold exclusively at Hole Foods. You know it's good because the packaging says the company is as old as the United States!
 
-![tacos](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/bitstrict taco.png?1555224895350)
+![tacos]({{ page.assets }}bitstrict taco.png?1555224895350)
 
 Here are potential applications for ads, and how the bitcamp pixels are placed in relation to the hotness of the sauce. Basically, for each step the sauce gets hotter, an additional row of pixels is shown.
 
-![ads](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/bitstrict ads.png?1555224895201)
-![screens](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/bitstrict artboards.png?1555224895283)
+![ads]({{ page.assets }}bitstrict ads.png?1555224895201)
+![screens]({{ page.assets }}bitstrict artboards.png?1555224895283)
  -->
 ## Brighten: Improve your mood in 2 minutes!
 
@@ -68,7 +69,7 @@ I designed an app that improves your mood with just 2 minutes, with the help of 
 
 <a href="https://sketch.cloud/s/49qJo/9PQRRAP/play" target="_blank" class="button uno"><img src="https://icon.now.sh/phone_iphone" /> Launch Sketch Prototype →</a>
 
-![screens](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/brighten%20artboards.png?1555224488955)
+![screens]({{ page.assets }}brighten%20artboards.png?1555224488955)
 
 <!-- ## Bitchella concert (feat. lots of hype artists)
 
@@ -76,7 +77,7 @@ _Prompt: Design something hype only using a shade of pale blue._
 
 There's nothing that says I can't use a transparent color! So using only white and overlays of #004980 at 25% alpha, I made a **HYPE** concert poster featuring **all of your favourite artists** from the Billboard Top 40 lists!
 
-![concert poster](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/concert.png?1555223939824)
+![concert poster]({{ page.assets }}concert.png?1555223939824)
  -->
 ## Treetop: Connecting kids in military families
 
@@ -88,9 +89,9 @@ Keeping in mind privacy and laws restricting the use of personally identifiable 
 
 <a href="https://sketch.cloud/s/49qJo/oY2110Y/play" target="_blank" class="button uno"><img src="https://icon.now.sh/phone_iphone" /> Launch Sketch Prototype →</a>
 
-![logo](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/treetop.png?1555223856126)
+![logo]({{ page.assets }}treetop.png?1555223856126)
 
-![screens](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/treetop%20artboards.png?1555223894761)
+![screens]({{ page.assets }}treetop%20artboards.png?1555223894761)
 
 ## BitPay: Bitcoin made easy
 
@@ -100,7 +101,7 @@ The rest of my left Bitcamp on Friday night never to seen again, and the only th
 
 <a href="https://sketch.cloud/s/49qJo/QbYjjv8/play" target="_blank" class="button uno"><img src="https://icon.now.sh/phone_iphone" /> Launch Sketch Prototype →</a>
 
-![screens](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/bitpay%20artboards.png?1555224619997)
+![screens]({{ page.assets }}bitpay%20artboards.png?1555224619997)
 
 <!-- ## Various mentorship
 
@@ -108,23 +109,23 @@ I also helped even more along the way. Here are some of them below:
 
 I helped a team trying to do Twitter search for social issues brainstorm a basic user interface.
 
-![photo](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/ui brainstorm.png?1555226383748)
+![photo]({{ page.assets }}ui brainstorm.png?1555226383748)
 
 I also worked on another team with adding color and typography to their mental health app.
 
-![photo](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/color improvements.png?1555226383470)
+![photo]({{ page.assets }}color improvements.png?1555226383470)
 
 Someone needed help with prettying up their command line application project, so I showed them the wonders of ASCII art!
 
-![photo](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/ascii art.png?1555226383529)
+![photo]({{ page.assets }}ascii art.png?1555226383529)
 
 A team needed last minute logo help, so I provided feedback that ultimated resulted in something like this (later renamed to PocDoc!)
 
-![photo](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/pockdoc%20logo.png?1555226383672)
+![photo]({{ page.assets }}pockdoc%20logo.png?1555226383672)
 
 Bonus pic: here's my setup for the weekend. Yes, I did carry a monitor all the way from Philly.
 
-![photo](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/bonus%3A my setup.png?1555226383938)
+![photo]({{ page.assets }}bonus%3A my setup.png?1555226383938)
  -->
 ---
 
