publish splat toon

--- a/_posts/2019-05-01-splatoon/2019-05-01-splatoon.md
+++ b/_posts/2019-05-01-splatoon/2019-05-01-splatoon.md
@@ -46,13 +46,15 @@ _Game modes, explained:_
 
 _Streamlabs alerts:_
 
-![game modes]({{ page.assets }}splatoon-streamlabs.png)
+![streamlabs assets]({{ page.assets }}splatoon-streamlabs.png)
 
 _Banner system for HRG esports:_
 
 ![banner]({{ page.assets }}splatoon-banner.png)
 
-(PS the game mode icons have been made into stickers!!)
+_PS the game mode icons have been made into stickers!!_
+
+![stickers]({{ page.assets }}splatoon-stickers.jpg)
 
 ## Current Stages Overlay
 
