--- a/_posts/2019-05-13-guru/2019-05-13-guru.md
+++ b/_posts/2019-05-13-guru/2019-05-13-guru.md
@@ -46,7 +46,7 @@ Additionally, I worked on other various improvement for users with Reduce Motion
 
 ## Profile pictures
 
-I worked on improving profile pictures across the site, in particular I worked on a new default avatars based user on initials!
+I worked on improving profile pictures across the site with a new default avatar system based on user initials.
 
 <row markdown="block">
 <column markdown="block">
@@ -61,19 +61,19 @@ I also revamped how avatars are uploaded on the site. Here are some before and a
 
 <row markdown="block">
 <column markdown="block">
-![guru preview after](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-preview-after.png)
+![guru upload before](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-upload-before.png)
 </column>
 <column markdown="block">
-![guru preview before](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-preview-before.png)
+![guru upload after](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-upload-after.png)
 </column>
 </row>
 
 <row markdown="block">
 <column markdown="block">
-![guru upload after](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-upload-after.png)
+![guru preview before](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-preview-before.png)
 </column>
 <column markdown="block">
-![guru upload before](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-upload-before.png)
+![guru preview after](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-preview-after.png)
 </column>
 </row>
 
