update lofi talk, update images in quotes, etc etc

--- a/_posts/2018-06-01-temple/2018-06-01-temple.md
+++ b/_posts/2018-06-01-temple/2018-06-01-temple.md
@@ -25,12 +25,14 @@ assets: https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/
 
 When I started on this project, there was a team of 5 copy writers and developers tasked with maintaing and updating content on all 60+ websites. Trying to keep up with different versions of Drupal, WordPress, SharePoint, DreamWeaver, DIY PHP, plain HTML, and more easily becomes a pain — not to mention the security nightmares and the difficulties of training people to use 50+ different content management systems.
 
+> <p>
 > <grid grid column-count="2" phone-column-count="1">
 >  <a href="https://wayback.archive.org/web/20161021193725/http://www.cla.temple.edu/american_studies/" target="_blank" class=""><img src="{{ page.assets }}temple-old-as.png" alt=""></a>
 >  <a href="https://wayback.archive.org/web/20161022020732/https://www.cla.temple.edu/cj/" target="_blank" class=""><img src="{{ page.assets }}temple-old-cj.png" alt=""></a>
 >  <a href="https://wayback.archive.org/web/20161021212258/http://www.cla.temple.edu/womenstu/" target="_blank" class=""><img src="{{ page.assets }}temple-old-gws.png" alt=""></a>
 >  <a href="https://wayback.archive.org/web/20161021212507/http://www.cla.temple.edu/neuroscience/" target="_blank" class=""><img src="{{ page.assets }}temple-old-ns.png" alt=""></a>
 > </grid>
+> </p>
 
 <!-- https://wayback.archive.org/web/20161021193725/http://www.cla.temple.edu/american_studies/
 https://wayback.archive.org/web/20160405040658/http://www.cla.temple.edu:80/asian_studies/
@@ -41,12 +43,14 @@ https://wayback.archive.org/web/20161021212258/http://www.cla.temple.edu/womenst
 
 Taking into account problems of the existing system, we set out to build a new system of sites that was secure, easy to maintain, and consistent. More imporantly, these new sites are designed to follow good readability and accessibility standards.
 
+> <p>
 > <grid grid column-count="2" phone-column-count="1">
-  <a href="https://www.cla.temple.edu/liberal-studies/" target="_blank" class=""><img src="{{ page.assets }}temple-new-ls.png" alt=""></a>
+>  <a href="https://www.cla.temple.edu/liberal-studies/" target="_blank" class=""><img src="{{ page.assets }}temple-new-ls.png" alt=""></a>
 >  <a href="https://www.cla.temple.edu/pre-law/" target="_blank" class=""><img src="{{ page.assets }}temple-new-pl.png" alt=""></a>
 >  <a href="https://develop.cla.temple.edu/psychology/graduate/" target="_blank" class=""><img src="{{ page.assets }}temple-new-psy.png" alt=""></a>
 >  <a href="https://develop.cla.temple.edu/neuroscience/faculty/" target="_blank" class=""><img src="{{ page.assets }}temple-new-ns.png" alt=""></a>
 > </grid>
+></p>
 
 ## Less is More
 
