--- a/_posts/2019-05-11-lofi-npm/2019-05-11-lofi-npm.md
+++ b/_posts/2019-05-11-lofi-npm/2019-05-11-lofi-npm.md
@@ -15,7 +15,7 @@ feature:
 image: meta-preview.png
 ---
 
-Here's a talk I gave at **BrooklynJS & Philly JS Meetup April 2019** about generating music with package managers!
+Here's a talk I gave at **!!Con 2019, BrooklynJS April 2019, Philly JS Meetup April 2019** about generating music with package managers!
 
 <script async class="speakerdeck-embed" data-id="3fef9ae3ebac418eb2453244f81e5d58" data-ratio="1.77777777777778" src="//speakerdeck.com/assets/embed.js"></script>
 
@@ -82,7 +82,7 @@ Image: MacBook power charge, from Apple.com.
 
 If you have 20/20 hearing and happen to be in a quiet room, you can also probably hear the sounds of a power brick.
 
-But so far, I have only described ways you can _physically_ listen to your computer. 
+But so far, I have only described ways you can _physically_ listen to your computer.
 
 ### Slide 11-12
 
@@ -162,7 +162,7 @@ Demo: node-red running a flow `npm install react-native -ddd`.
 
 Demo: opening the output.txt file that was generated.
 
-Scrolling thru the file we just generated, we have 29,839 lines of logs we can work with! 
+Scrolling thru the file we just generated, we have 29,839 lines of logs we can work with!
 
 ### Slides 21-22
 
@@ -194,9 +194,9 @@ Demo: we now have some nice music playing!
 
 There are things I cut out for the sake of time.
 
-You could add a synthesizer. (But turns out generating 27,000 notes on the fly crashes my ancient Macbook!) 
+I can show you how I generate a bunch of notes without breaking my computer.
 
-You could implement bandwidth throttling.
+I could implement bandwidth throttling to see one package install at a time.
 
 If I had more time, I could show you how to add visualizations by hooking into tone.js.
 
