--- a/_posts/2019-05-13-guru/2019-05-13-guru.md
+++ b/_posts/2019-05-13-guru/2019-05-13-guru.md
@@ -23,9 +23,18 @@ I spent a few months working with Guru to improve their customer-facing product 
 
 I added useful information and brand personality to many "inbox-zero" pages that were previously blank. For new users, this helps with on-board by explaining what each section of the site is used for, and for existing users, this gives them something nice to look at!
 
-![guru blank mentions](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-blank-mentions.png)
-![guru blank questions](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-blank-questions.png)
-![guru blank verified](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-blank-verified.png)
+> ![guru blank verified]({{ page.assets }}guru-blank-verified.png)
+> <row markdown="block">
+> <column markdown="block" width="50">
+> ![guru blank questions]({{ page.assets }}guru-blank-questions.png)
+> </column>
+> <column markdown="block" width="50">
+> ![guru blank mentions]({{ page.assets }}guru-blank-mentions.png)
+> </column>
+> </row>
+
+
+
 
 ## Accessibility improvements
 
@@ -33,14 +42,14 @@ I created an internal guide on creating React components with accessibility best
 
 Here are screenshots of keyboard navigability in action thanks to focus states:
 
-<row markdown="block">
-<column markdown="block">
-![guru checkbox 1](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-checkbox-1.png)
-</column>
-<column markdown="block">
-![guru checkbox 2](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-checkbox-2.png)
-</column>
-</row>
+> <row markdown="block">
+> <column markdown="block" width="50">
+> ![guru checkbox 1]({{ page.assets }}guru-checkbox-1.png)
+> </column>
+> <column markdown="block" width="50">
+> ![guru checkbox 2]({{ page.assets }}guru-checkbox-2.png)
+> </column>
+> </row>
 
 Additionally, I worked on other various improvement for users with Reduce Motion and Increase Contrast enabled in their accessibility settings.
 
@@ -48,34 +57,34 @@ Additionally, I worked on other various improvement for users with Reduce Motion
 
 I worked on improving profile pictures across the site with a new default avatar system based on user initials.
 
-<row markdown="block">
-<column markdown="block">
-![guru avatar users](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-avatar-users.png)
-</column>
-<column markdown="block">
-![guru avatars feed](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-avatars-feed.png)
-</column>
-</row>
+> <row markdown="block">
+> <column markdown="block" width="50">
+> ![guru avatar users]({{ page.assets }}guru-avatar-users.png)
+> </column>
+> <column markdown="block" width="50">
+> ![guru avatars feed]({{ page.assets }}guru-avatars-feed.png)
+> </column>
+> </row>
 
 I also revamped how avatars are uploaded on the site. Here are some before and after screenshots:
 
-<row markdown="block">
-<column markdown="block">
-![guru upload before](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-upload-before.png)
-</column>
-<column markdown="block">
-![guru upload after](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-upload-after.png)
-</column>
-</row>
+> <row markdown="block">
+> <column markdown="block" width="50">
+> ![guru upload before]({{ page.assets }}guru-upload-before.png)
+> </column>
+> <column markdown="block" width="50">
+> ![guru upload after]({{ page.assets }}guru-upload-after.png)
+> </column>
+> </row>
 
-<row markdown="block">
-<column markdown="block">
-![guru preview before](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-preview-before.png)
-</column>
-<column markdown="block">
-![guru preview after](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/guru-preview-after.png)
-</column>
-</row>
+> <row markdown="block">
+> <column markdown="block" width="50">
+> ![guru preview before]({{ page.assets }}guru-preview-before.png)
+> </column>
+> <column markdown="block" width="50">
+> ![guru preview after]({{ page.assets }}guru-preview-after.png)
+> </column>
+> </row>
 
 ## A ton of other tiny things
 
